dnl
dnl configure.in - for building configure
dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.5 2004/08/25 20:24:49 s-nomad Exp $
AC_INIT(ncrypt.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ncrypt,0.6.11)

AC_PREFIX_DEFAULT(/usr/local)

if test "$prefix" = "NONE"; then
	prefix="/usr/local"
fi

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h sys/stat.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

AC_HEADER_TIME

if test $ac_cv_c_compiler_gnu = yes; then
	CCOPTS='-O3 -Wall'
	CFLAGS="$CCOPTS"
fi

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday strdup strerror)

MAN_PREFIX="$prefix/man/man8/"

AC_OUTPUT(Makefile)
